# tsujikiri

./: .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  _config.yml  codecov.yml  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  tests.yml  typecheck.yml
cmake/: FetchDependencies.cmake
docs/: attributes.md  conf.py  filtering.md  getting-started.md  index.md  input-file-reference.md  manifest-and-versioning.md  output-formats.md  transforms.md
src/tsujikiri/: __init__.py  __main__.py  attribute_processor.py  attribute_processor.pyi  clang_base_enumerations.py  clang_base_enumerations.pyi  clang_cursor_manager.py  cli.py  cli.pyi  configurations.py  configurations.pyi  filters.py  filters.pyi  formatters.py  generator.py  generator.pyi  generator_filters.py  generator_filters.pyi  inspect.py  ir.py  ir.pyi  manifest.py  manifest.pyi  parser.py  parser.pyi  pretty_printers.py  pretty_printers.pyi  tir.py  tir.pyi  transforms.py  transforms.pyi  typesystem.py  typesystem.pyi
src/tsujikiri/formats/: __init__.py  __init__.pyi  c_api.output.yml  luabridge3.output.tpl  luabridge3.output.yml  luals.output.tpl  luals.output.yml  pybind11.output.tpl  pybind11.output.yml  pyi.output.tpl  pyi.output.yml
src/tsujikiri/helpers/: generate_clang_base_enumeration_member_types.py  generate_cursor_manager.py
tests/: CMakeLists.txt  conftest.py
tests/stubs/luabridge3_stubs/LuaBridge/: LuaBridge.h
tests/stubs/pybind11_stubs/pybind11/: pybind11.h
tests/test_attribute_processor/: test_attribute_processor.py
tests/test_clang_base_enumerations/: test_clang_base_enumerations.py
tests/test_cli/: broken.hpp  conftest.py  multi_out_a.hpp  multi_out_b.hpp  simple.hpp  test_cli.py  warning.hpp
tests/test_compilation/: .gitignore  CMakeLists.txt  c_api_bindings.cpp  combined.hpp  combined.input.yml  conftest.py  test_compilation.py  test_generation.py
tests/test_compilation/audio/: CMakeLists.txt  audio.hpp  audio.input.yml  luabridge3_main.cpp  pybind11_verify.py
tests/test_compilation/cmake/: common.cmake  fetch_lua.cmake  fetch_luabridge3.cmake  fetch_pybind11.cmake
tests/test_compilation/combined/: CMakeLists.txt  combined.input.yml  luabridge3_main.cpp
tests/test_compilation/engine/: CMakeLists.txt  engine.input.yml  entity.hpp  luabridge3_main.cpp  math_types.hpp  pybind11_verify.py
tests/test_compilation/geo/: CMakeLists.txt  base.hpp  geo.input.yml  luabridge3_main.cpp  pybind11_verify.py  shapes.hpp
tests/test_compilation/samplebinding/: CMakeLists.txt  pybind11_verify.py  samplebinding.hpp  samplebinding.input.yml
tests/test_compilation/transforms/: CMakeLists.txt  luabridge3_main.cpp  pybind11_verify.py  transforms.input.yml  transforms_test.hpp
tests/test_compilation/typesystem/: CMakeLists.txt  luabridge3_main.cpp  pybind11_verify.py  types.hpp  typesystem.input.yml
tests/test_configurations/: multi.input.yml  multi_out.input.yml  simple.input.yml  test_configurations.py  test_typesystem.py
tests/test_filters/: filter.hpp  test_filters.py
tests/test_formats/: test_formats.py  test_luabridge3_format.py  test_luals_free_functions.py  test_new_features_format.py  test_pybind11_format.py  test_pybind11_free_functions.py  test_pyi_format.py
tests/test_formatters/: test_formatters.py
tests/test_generator/: test_generator.py  test_new_context_fields.py
tests/test_generator_filters/: test_generator_filters.py
tests/test_ir/: test_ir.py
tests/test_main/: test_main.py
tests/test_manifest/: test_manifest.py
tests/test_parser/: combined.hpp  combined.input.yml  conftest.py  defaults.hpp  nested_namespaces.hpp  nested_types.hpp  new_features.hpp  test_new_features.py  test_parser.py  test_scope_traversal.py  type_namespaces.hpp  type_tokens.hpp
tests/test_pretty_printers/: test_pretty_printers.py
tests/test_transforms/: test_enum_function_stages.py  test_new_stages.py  test_new_transform_stages.py  test_pipeline_composition.py  test_policy_stages.py  test_transforms.py
