[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsujikiri"
description = "辻斬り Generic C++ Bindings Generator"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "kunitoki", email = "kunitoki@gmail.com" },
]
dependencies = [
  "libclang-ng>=21,<22",
  "clang-format==22.1.3",
  "pyyaml>=6.0.3",
  "jinja2>=3.1.6",
]
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Utilities",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/kunitoki/tsujikiri"

[project.scripts]
tsujikiri = "tsujikiri.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.8.0",
  "cmake>=3.20",
  "zig-bin>=0.15.2",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["tsujikiri*"]

[tool.setuptools.package-data]
tsujikiri = ["py.typed", "*.pyi", "formats/*.pyi", "formats/*.yml", "formats/*.tpl"]

[tool.setuptools.dynamic]
version = { attr = "tsujikiri.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["_deps", "*/build", "__pycache__", ".venv"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
files = ["src/tsujikiri"]
