[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsujikiri"
description = "辻斬り Generic C++ Bindings Generator"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "kunitoki", email = "kunitoki@gmail.com" },
]
dependencies = [
  "libclang-ng>=19",
  "clang-format==22.1.3",
  "pyyaml>=6.0.3",
  "jinja2>=3.1.6",
  "ruff>=0.15.11",
]
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Utilities",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/kunitoki/tsujikiri"

[project.scripts]
tsujikiri = "tsujikiri.__main__:main"

[project.optional-dependencies]
clang19 = ["libclang-ng>=19,<20"]
clang20 = ["libclang-ng>=20,<21"]
clang21 = ["libclang-ng>=21,<22"]
clang22 = ["libclang-ng>=22,<23"]
dev = [
  "pytest>=9.0",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.8.0",
  "cmake>=3.20",
  "zig-bin>=0.15.2",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["tsujikiri*"]

[tool.setuptools.package-data]
tsujikiri = ["py.typed", "*.pyi", "formats/*.pyi", "formats/*.yml", "formats/*.tpl"]

[tool.setuptools.dynamic]
version = { attr = "tsujikiri.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["_deps", "*/build", "__pycache__", ".venv"]

[tool.uv]
conflicts = [
  [
    { extra = "clang19" },
    { extra = "clang20" },
    { extra = "clang21" },
    { extra = "clang22" },
  ],
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
files = ["src/tsujikiri"]

[dependency-groups]
docs = [
  "sphinx",
  "myst-parser",
  "sphinx-rtd-theme",
]

[tool.ruff]
include = ["src", "tests"]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
